[gd_scene load_steps=7 format=3 uid="uid://b5s4il5p4pt68"]

[ext_resource type="Script" path="res://mode_menu.gd" id="1_b6b7v"]
[ext_resource type="Texture2D" uid="uid://dap7i3bphd2hu" path="res://background_buttons/unlock_button.png" id="2_kuvdr"]
[ext_resource type="Texture2D" uid="uid://kam5g042pbtj" path="res://background_buttons/k-temn.png" id="3_5bqbb"]
[ext_resource type="Texture2D" uid="uid://dkqp1aemjln4s" path="res://background_buttons/lock_button.png" id="4_1afiy"]
[ext_resource type="PackedScene" uid="uid://lwvm5pmyvvli" path="res://background/bg_main.tscn" id="5_vth7o"]
[ext_resource type="PackedScene" uid="uid://0mdjnjd1kus3" path="res://settings_button.tscn" id="6_036eu"]

[node name="mode_menu" type="Node2D"]
script = ExtResource("1_b6b7v")

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 64.0
offset_top = 298.0
offset_right = 274.0
offset_bottom = 368.0
texture_normal = ExtResource("2_kuvdr")
texture_pressed = ExtResource("3_5bqbb")
texture_disabled = ExtResource("4_1afiy")

[node name="Label" type="Label" parent="BackButton"]
layout_mode = 0
offset_left = 36.0
offset_top = 14.0
offset_right = 171.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Назад"
horizontal_alignment = 1

[node name="OnlineModeButton" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 114.0
offset_right = 277.0
offset_bottom = 184.0
disabled = true
texture_normal = ExtResource("2_kuvdr")
texture_pressed = ExtResource("3_5bqbb")
texture_disabled = ExtResource("4_1afiy")

[node name="Label" type="Label" parent="OnlineModeButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 198.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Онлайн"
horizontal_alignment = 1

[node name="OfflineModeButton" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 207.0
offset_right = 277.0
offset_bottom = 277.0
texture_normal = ExtResource("2_kuvdr")
texture_pressed = ExtResource("3_5bqbb")
texture_disabled = ExtResource("4_1afiy")

[node name="Label" type="Label" parent="OfflineModeButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 18.0
offset_right = 200.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "С компьютером"
horizontal_alignment = 1

[node name="MainBackground" parent="." instance=ExtResource("5_vth7o")]
position = Vector2(45, 426)

[node name="SettingsButton" parent="." instance=ExtResource("6_036eu")]
position = Vector2(2, -2)

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="OfflineModeButton" to="." method="_on_offline_mode_button_pressed"]
